@@ -740,20 +740,20 @@ hex_dump(void *buff, register size_t count)
     register unsigned char *ptr;
     unsigned char buffr[9];
 
-    print_error(" Address |  Size  | Offset  | 00 01 02 03 04 05 06 07 |  ASCII  \n");
-    print_error("---------+--------+---------+-------------------------+---------\n");
+    fprintf(stderr, "  Address  |  Size  | Offset  | 00 01 02 03 04 05 06 07 |  ASCII  \n");
+    fprintf(stderr, "-----------+--------+---------+-------------------------+---------\n");
     for (ptr = (unsigned char *) buff, j = 0; j < count; j += 8) {
-        print_error(" %8p | %06lu | %07x | ", buff, (unsigned long) count, (unsigned int) j);
+        fprintf(stderr, " %010p | %06lu | %07x | ", buff, (unsigned long) count, (unsigned int) j);
         l = ((count - j < 8) ? (count - j) : (8));
         memcpy(buffr, ptr + j, l);
         memset(buffr + l, 0, 9 - l);
         for (k = 0; k < l; k++) {
-            print_error("%02x ", buffr[k]);
+            fprintf(stderr, "%02x ", buffr[k]);
         }
         for (; k < 8; k++) {
-            print_error("   ");
+            fprintf(stderr, "   ");
         }
-        print_error("| %-8s\n", safe_str((char *) buffr, l));
+        fprintf(stderr, "| %-8s\n", safe_str((char *) buffr, l));
     }
 }
 
